# PhiFun

./: CMakeLists.txt  README.md
PhiBox/: CMakeLists.txt
PhiBox/PhiBox/: Convolution.h  ImageProcessing.h  Sampling.h  SplineIntegrator.h  StepperAlgo.h  StepperPipeline.h
PhiBox/conf/: PhiTimeConvolution.conf
PhiBox/src/lib/: Convolution.cpp  ImageProcessing.cpp  Sampling.cpp  SplineIntegrator.cpp  StepperAlgo.cpp  StepperPipeline.cpp
PhiBox/src/program/: PhiTimeConvolution.cpp  PhiTimeIntegration.cpp
PhiBox/tests/src/: Convolution_test.cpp  ImageProcessing_test.cpp  Sampling_test.cpp  SplineIntegrator_test.cpp  StepperAlgo_test.cpp  StepperPipeline_test.cpp
PhiDuffieux/: CMakeLists.txt
PhiDuffieux/PhiDuffieux/: BroadbandSystem.h  MonochromaticOptics.h  MonochromaticSystem.h
PhiDuffieux/conf/: PhiEstimatePsf.conf  PhiGeneratePsf.conf
PhiDuffieux/src/lib/: BroadbandSystem.cpp  MonochromaticOptics.cpp  MonochromaticSystem.cpp
PhiDuffieux/src/program/: PhiEstimatePsf.cpp  PhiGeneratePsf.cpp
PhiDuffieux/tests/src/: BroadbandSystem_test.cpp  MonochromaticOptics_test.cpp  MonochromaticSystem_test.cpp
PhiFourier/: CMakeLists.txt
PhiFourier/PhiFourier/: Dft.h  DftBuffer.h  DftMemory.h  DftPlan.h
PhiFourier/src/lib/: Dft.cpp  DftBuffer.cpp  DftMemory.cpp  DftPlan.cpp
PhiFourier/tests/src/: DftBuffer_test.cpp  DftMemory_test.cpp  DftPlan_test.cpp  Dft_test.cpp
PhiMiller/: CMakeLists.txt
PhiMiller/PhiMiller/: LambdaIntegrator.h
PhiMiller/conf/: PhiTimeIntegration.conf
PhiMiller/src/lib/: LambdaIntegrator.cpp
PhiMiller/src/program/: PhiTimeIntegration.cpp
PhiMiller/tests/src/: LambdaIntegrator_test.cpp
PhiZernike/: CMakeLists.txt
PhiZernike/PhiZernike/: Chong.h  Indexing.h  Zernike.h
PhiZernike/PhiZernike/impl/: Indexing.hpp  Zernike.hpp
PhiZernike/src/lib/: Chong.cpp  Indexing.cpp  Zernike.cpp
PhiZernike/tests/src/: Chong_test.cpp  Indexing_test.cpp  Zernike_test.cpp
doc/: mainpage.dox  pd.ipynb
